<resources>
    <string name="app_name">SRIST</string>
    <string name="Profile">profile</string>
    <string name="Notifications">notifications</string>
    <string name="Settings">settings</string>
    <string name="Support">support</string>
    <string name="About_us">aboutus</string>
    <string name="alredy_have_an_account">Alredy have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="your_email">Your email</string>
    <string name="full_name">Full name</string>
    <string name="create_a_new_accout">Create a new accout</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back_mesage">Welcome back. Please login to your account</string>
    <string name="forget_password">Forget password</string>
    <string name="google_sign_in">Sign In with google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="submit">SUBMIT</string>
    <string name="_1st_class">1st Class</string>
    <string name="_2nd_class">2nd Class</string>
    <string name="_3rd_class">3rd Class</string>
</resources>