<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile" />

    <item
        android:id="@+id/menuNotifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/Notifications" />

    <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/ic_setting"
        android:title="@string/Settings" />

    <item
        android:id="@+id/menuSupport"
        android:icon="@drawable/ic_support"
        android:title="@string/Support" />

    <item
        android:id="@+id/menuAboutus"
        android:icon="@drawable/ic_help"
        android:title="@string/About_us" />

</menu>