<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_a_new_accout"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/fullNameET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/rectangle"
        android:hint="@string/full_name"
        android:autofillHints="full name"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/rectangle"
        android:hint="@string/your_email"
        android:autofillHints="emailAddress"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/mobileET"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/rectangle"
        android:hint="@string/mobile_number"
        android:autofillHints="phone"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle">

        <EditText
            android:id="@+id/passwordET"
            android:layout_toStartOf="@+id/passwordIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle"
            android:hint="@string/password"
            android:autofillHints="password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:src="@drawable/eye_open" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle">

        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_toStartOf="@+id/confirmPasswordIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle"
            android:hint="@string/confirm_password"
            android:autofillHints="password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <ImageView
            android:id="@+id/confirmPasswordIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:src="@drawable/eye_open" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@drawable/round_back_primary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <View
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000"
            android:layout_marginEnd="210dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_centerInParent="true"
            android:textColor="#80000000"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/orText"
            android:background="#1A000000" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alredy_have_an_account"/>

        <TextView
            android:id="@+id/signInBtn"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>